# streamYourClaw

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_CN.md  docker-compose.yml  pyproject.toml  start_redis.py
backend/: requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/agents/: __init__.py  base.py  supervisor.py
backend/app/agents/openclaw/: __init__.py  adapter.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/core/: __init__.py  events.py  message_queue.py  state_engine.py
backend/app/models/: __init__.py  message.py  state.py  task.py
docs/: api.md  architecture.md
docs/contributing/: agents.md  themes.md  videos.md
docs/plans/: 2026-03-19-streamyourclaw-design.md
frontend/: index.html
frontend/assets/: mindmap.json  thoughts.json
frontend/assets/videos/: meta.json
frontend/css/: mindmap.css  status.css  style.css
frontend/js/: app.js  mindmap.js  mock-agent.js  status.js  thought-logger.js  video-status.js
scripts/: dev.sh  start.sh
